objects/Co_Borrower__c.object
<CustomObject>
    <description>This object tracks the Co-Borrower Customer that associated with the Opportunity</description>
    <fields>
        <fullName>CIS_ID_Prospect_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS ID / Prospect Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Co_Borrower_Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Name_Surname_TH__c</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Co_Borrower_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Co-Borrower</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Borrowers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Not_allow_to_select_same_customer_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.Account.Id = CIS_ID_Prospect_Name__r.Id</errorConditionFormula>
        <errorDisplayField>CIS_ID_Prospect_Name__c</errorDisplayField>
        <errorMessage>Cannot select the same customer with Opportunity</errorMessage>
    </validationRules>
</CustomObject>